# HCSCSOPGenerator-1

./: .replit  1. Standard Operating Procedure example_Bulk uploads_with definitions.docx  README.md  SOP GENERATOR AMENDMENTS 2.docx  SOP GENERATOR AMENDMENTS.docx  app.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
instance/: sop.db
routes/: __init__.py  template_routes.py
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html
templates/templates/: list.html  new.html
utils/: document_generator.py  openai_service.py
