[project]
name = "repl-nix-hcscsopgenerator-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "routes>=2.5.1",
    "python-docx>=1.1.2",
]
